# axum-crud-app

./: Cargo.toml  wrangler.toml
src/: controllers.rs  lib.rs  models.rs  services.rs  utils.rs
