[package]
name = "axum-crud-app"
version = "0.1.0"
edition = "2021"
authors = [ "Wagura Maurice <business@waguramaurice.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.1", features=['http', 'axum'] }
worker-macros = { version="0.4.1", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
sqlx = "0.8.2"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"
tower = "0.5.1"
