# Cargo.toml
[package]
name = "axum-crud-app"
version = "0.1.0"
edition = "2021"
authors = ["Wagura Maurice <business@waguramaurice.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5", features = ["http", "axum"] }
worker-macros = { version = "0.5", features = ["http"] }
axum = { version = "0.7", features = ["tokio", "macros"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.7" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tower = "0.4.13"
jsonwebtoken = { version = "8.2", default-features = false, features = ["serde"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.107"