# Cargo.toml
[package]
name = "axum-crud-app"
version = "0.1.0"
edition = "2021"
authors = ["Wagura Maurice <business@waguramaurice.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.1", features=['http', 'axum'] }
worker-macros = { version="0.4.1", features=['http'] }
axum  = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tower = "0.4.13"
jsonwebtoken = "9.3.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.107"
bcrypt = "0.15.1"
